c4prj2_input/grade.txt
Grading at Mon Sep 24 19:47:00 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:32:20: error: ‘p’ undeclared (first use in this function)
       int n = atoi(p);
                    ^
input.c:32:20: note: each undeclared identifier is reported only once for each function it appears in
input.c:28:12: error: variable ‘chN’ set but not used [-Werror=unused-but-set-variable]
       char chN[j];
            ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
